# kunkka

./: AGENTS.md  Cargo.toml  LICENSE  README.md
crates/kunkka-cli/: Cargo.toml
crates/kunkka-cli/src/: cli.rs  client.rs  error.rs  lib.rs  main.rs  output.rs
crates/kunkka-cli/tests/: cli_args.rs  client_mapping.rs  integration.rs  output.rs
crates/kunkka-core/: Cargo.toml
crates/kunkka-core/migrations/: 0001_core_metadata.sql  0002_frontend_dispatch_audit.sql
crates/kunkka-core/src/: app_manifest.rs  approval.rs  database.rs  error.rs  ipc_server.rs  lib.rs  main.rs  permissions.rs  runtime.rs  worker_dispatch.rs  worker_registry.rs  xdg.rs
crates/kunkka-core/src/capability/: fs.rs  http.rs  llm.rs  mod.rs  permissions.rs  shell.rs  sqlite.rs
crates/kunkka-core/src/llm/: config.rs  mod.rs  presets.rs  provider.rs  role.rs  types.rs  usage.rs
crates/kunkka-core/src/theme/: mod.rs  palette.rs
crates/kunkka-core/tests/: app_manifest.rs  capability_fs_ops.rs  capability_permissions.rs  capability_runtime.rs  core_control_protocol.rs  core_runtime_control.rs  core_runtime_loop.rs  database.rs  frontend_dispatch_runtime.rs  http_capability.rs  http_manifest.rs  http_runtime.rs  ipc_server.rs  llm_invocation.rs  llm_presets.rs  llm_provider.rs  llm_role.rs  permissions.rs  runtime.rs  shell_policy.rs  shell_runtime.rs  sqlite_capability.rs  theme_manager.rs  theme_types.rs  worker_dispatch_cold.rs  worker_dispatch_warm.rs  worker_idle.rs  worker_registration.rs  worker_registry.rs  worker_runtime_registration.rs  xdg_paths.rs
crates/kunkka-ipc/: Cargo.toml
crates/kunkka-ipc/src/: codec.rs  error.rs  frame.rs  lib.rs  transport.rs
crates/kunkka-ipc/tests/: unix_transport.rs
crates/kunkka-native-host/: Cargo.toml
crates/kunkka-native-host/src/: bridge.rs  error.rs  host.rs  lib.rs  main.rs  native_messaging.rs  native_protocol.rs  path.rs
crates/kunkka-native-host/tests/: bridge_mapping.rs  bridge_session.rs  host_loop.rs  native_messaging.rs  native_protocol.rs  path.rs
crates/kunkka-protocol/: Cargo.toml
crates/kunkka-protocol/src/: core_control.rs  error.rs  frontend_dispatch.rs  lib.rs
crates/kunkka-protocol/tests/: core_control.rs  frontend_dispatch.rs  theme_protocol.rs
crates/kunkka-tui/: Cargo.toml
crates/kunkka-tui/src/: app.rs  client.rs  error.rs  event.rs  lib.rs  main.rs  ui.rs
crates/kunkka-tui/tests/: approvals.rs  ping.rs
crates/kunkka-worker-sdk/: Cargo.toml
crates/kunkka-worker-sdk/src/: capability.rs  client.rs  codec.rs  error.rs  lib.rs  llm.rs  types.rs
crates/kunkka-worker-sdk/tests/: capability_client.rs  capability_runtime.rs  dispatch_client.rs  llm_stream.rs  registration_codec.rs
docs/: architecture.md  browser-extension.md  development-log.md  ipc.md  permissions.md  storage.md  worker.md
docs/SDK/: capability-fs.md  capability-http.md  capability-llm.md  capability-shell.md  capability-sqlite.md  frontend-theme.md  permissions.md  worker-llm-usage.md  worker.md
docs/superpowers/plans/: 2026-06-11-core-control-protocol.md  2026-06-11-core-registry-loop.md  2026-06-11-core-xdg-runtime.md  2026-06-11-ipc-workspace.md  2026-06-11-native-host-bridge.md  2026-06-11-worker-registration.md  2026-06-12-worker-dispatch.md  2026-06-15-frontend-dispatch.md  2026-06-15-manifest-permissions.md  2026-06-16-cli-frontend.md  2026-06-16-core-database-foundation.md  2026-06-16-frontend-dispatch-audit.md  2026-06-16-tui-frontend.md  2026-06-17-capability-layer.md  2026-06-17-cli-approval-control.md  2026-06-17-cli-shell-approval.md  2026-06-17-native-host-approval.md  2026-06-17-shell-capability-approval.md  2026-06-17-tui-approval.md  2026-06-17-worker-sdk-capability-runtime.md  2026-06-18-http-capability.md  2026-06-18-llm-provider-layer1.md  2026-06-18-sqlite-capability.md
docs/superpowers/specs/: 2026-06-11-core-control-protocol-design.md  2026-06-11-core-registry-loop-design.md  2026-06-11-native-host-bridge-design.md  2026-06-12-worker-dispatch-design.md  2026-06-15-frontend-dispatch-design.md  2026-06-15-manifest-permissions-design.md  2026-06-16-cli-frontend-design.md  2026-06-16-core-database-foundation-design.md  2026-06-16-frontend-dispatch-audit-design.md  2026-06-16-tui-frontend-design.md  2026-06-17-capability-layer-design.md  2026-06-17-cli-shell-approval-design.md  2026-06-17-native-host-approval-design.md  2026-06-17-shell-capability-approval-design.md  2026-06-17-tui-approval-design.md  2026-06-18-http-capability-design.md  2026-06-18-sqlite-capability-design.md  2026-06-20-theme-system-design.md
