[workspace]
resolver = "2"
members = [
  "crates/kunkka-ipc",
  "crates/kunkka-protocol",
  "crates/kunkka-core",
  "crates/kunkka-worker-sdk",
  "crates/kunkka-native-host",
  "crates/kunkka-cli",
  "crates/kunkka-tui",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"

[workspace.dependencies]
async-openai = { version = "0.41", features = ["chat-completion", "embedding", "image"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures-util = { version = "0.3", features = ["sink"] }
libc = "0.2"
postcard = { version = "1", features = ["use-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "net", "process", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
reqwest = { version = "0.12", features = ["gzip", "deflate"] }
