[package]
name = "kunkka-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
kunkka-ipc = { path = "../kunkka-ipc" }
kunkka-worker-sdk = { path = "../kunkka-worker-sdk" }
libc.workspace = true
postcard.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
