[package]
name = "kunkka-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-openai.workspace = true
futures-util.workspace = true
kunkka-ipc = { path = "../kunkka-ipc" }
kunkka-protocol = { path = "../kunkka-protocol" }
kunkka-worker-sdk = { path = "../kunkka-worker-sdk" }
libc.workspace = true
postcard.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile.workspace = true
