[package]
name = "kunkka-ipc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
bytes.workspace = true
futures-util.workspace = true
postcard.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tempfile.workspace = true
