[package]
name = "kunkka-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
kunkka-ipc = { path = "../kunkka-ipc" }
kunkka-protocol = { path = "../kunkka-protocol" }
libc.workspace = true
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
kunkka-core = { path = "../kunkka-core" }
postcard.workspace = true
tempfile = "3"
