[package]
name = "kunkka-worker-sdk"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
kunkka-ipc = { path = "../kunkka-ipc" }
postcard.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
kunkka-core = { path = "../kunkka-core" }
tempfile.workspace = true
tokio.workspace = true
